# cpp_sockets_test

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cpp-sockets-test.sln
.cmake/api/v1/reply/: cache-v2-fca17f110cc2ef762ab2.json  cmakeFiles-v1-76ce79314479b834cef5.json  codemodel-v2-0d3d89ff943574c6d8f0.json  index-2025-01-09T11-11-04-0127.json  target-ALL_BUILD-Debug-3772464c305b7ebec12e.json  target-ALL_BUILD-RelWithDebInfo-2000c54d3a0dde8fae18.json  target-ZERO_CHECK-Release-092ab6c09344f75430f2.json  target-client-Debug-457c85bb0b7f77f0b4ef.json  target-client-MinSizeRel-3802cfdb215e1091b20d.json  target-client-RelWithDebInfo-958d1a120e545315b5be.json  target-client-Release-a07e958c13dccc49a658.json  target-server-Debug-73abe7bfa0ce0652a2de.json  target-server-MinSizeRel-2c3b98663bb48e93c725.json  (+3 more)
code/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CppSocketsTest.sln  client.cpp  client.vcxproj  client.vcxproj.filters  cmake_install.cmake  cpp-sockets-test.vcxproj  cpp-sockets-test.vcxproj.filters  server.cpp  server.vcxproj  server.vcxproj.filters
code/client/: CMakeLists.txt  client.cpp
code/client.dir/Debug/: client.exe.recipe  client.ilk
code/cpp-sockets-test.dir/Debug/: cpp-sockets-test.exe.recipe  cpp-sockets-test.ilk
code/server/: CMakeLists.txt  server.cpp
code/server.dir/Debug/: server.exe.recipe  server.ilk
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
(+29 files in other folders)
